Bug 92426 - Box not showing for an entire row and entire column notation
Summary: Box not showing for an entire row and entire column notation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords:
: 92441 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-29 13:47 UTC by Óvári
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Óvári 2015-06-29 13:47:24 UTC
tdf#44419

Steps to reproduce bug for an entire column
-------------------------------------------

1. In cell A1 enter: =sum(B:B)
2. In cell A2 enter: =sum(B1:B1048576)

3. Click on cell A1.
4. Press F2. Unfortunately there is no box showing (this is an bug).

5. Click on cell A2.
6. Press F2. Fortunately there is a box showing (this is the correct behaviour).


Steps to reproduce bug for an entire row
----------------------------------------

7. In cell C1 enter: =sum(10:10)
8. In cell C2 enter: =sum(A10:AMJ10)

9. Click on cell C1.
10. Press F2. Unfortunately there is no box showing (this is an bug).

11. Click on cell C2.
12. Press F2. Fortunately there is a box showing (this is the correct behaviour).
Comment 1 Commit Notification 2015-06-30 12:35:19 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=07cd14f1e3ee718e56d063db8c331bec173f4408

tdf#92426 explicitly set valid row/col for entire col/row references

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2015-06-30 12:53:37 UTC
*** Bug 92441 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2015-06-30 12:58:49 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59487150df556457cb3c919b0b0ea5d6b625b185&h=libreoffice-5-0

tdf#92426 explicitly set valid row/col for entire col/row references

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2015-06-30 13:41:42 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=26d1a597a4c2258b652434856198c0ee8e1af87f

unit test, check for all ScRange::Parse() valid flags, tdf#92426

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.