tdf#92426 explicitly set valid row/col for entire col/row references

... for callers that individually check for them, like
ScRange::ParseAny()

Change-Id: I23fc2c178a9c89b59f99f2fb86223324b7e5d378
(cherry picked from commit 07cd14f1e3ee718e56d063db8c331bec173f4408)